[package]
name = "tiny_rust_wasm"
description = "A very small rust + wasm example. Fight waste!"
repository = "https://github.com/misaim/tiny_rust_wasm"
version = "0.0.1"
authors = ["Liam github.com/misaim"]
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
